--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   },
   "homepage": "https://github.com/deot/http#readme",
   "devDependencies": {
-    "@deot/dev-cli": "^1.0.7"
+    "@deot/dev": "^2.0.5"
   }
 }
