--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "@deot/dev-cli/config/tsconfig.json",
+  "extends": "@deot/dev/tsconfig.shared.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "paths": {
       "@deot/http": ["packages/index/src"],
       "@deot/http-*": ["packages/*/src"]
@@ -13,6 +10,7 @@
   "include": [
     "packages/shims.d.ts",
     "packages/*/__tests__",
+    "packages/*/examples",
     "packages/*/src"
   ],
   "exclude": [
