chore: update `@deot/dev@2.2.5`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,8 @@ jobs:
       - run: pnpm install
 
       - name: Run unit tests
-        run: npm run test -- --package-name '**'
+        run: npm run test -- --package-name '*'
+
+      - name: Run build
+        run: npm run build
 
