--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:watch": "npm run lint -- --watch --fix",
     "link": "ddc link",
     "dev": "ddc dev",
-    "build": "ddc build",
+    "build": "ddc build --script-formats=es,cjs,umd,iife",
+    "update": "ddc update",
     "test": "ddc test",
     "add": "ddc add",
     "release": "ddc release"
@@ -23,6 +24,7 @@
     "add": "创建新包或者给包添加依赖",
     "dev": "开发模式",
     "build": "打包模式",
+    "update": "更新 devDependencies 和 dependencies",
     "test": "执行测试, 可选择单个包或全部"
   },
   "repository": {
@@ -36,6 +38,6 @@
   },
   "homepage": "https://github.com/deot/http#readme",
   "devDependencies": {
-    "@deot/dev": "^2.0.6"
+    "@deot/dev": "^2.2.5"
   }
 }
