feat: shell -> core & initial

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deot/http-shell",
+  "name": "@deot/http-core",
   "version": "1.0.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
