--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,5 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "formidable": "^3.5.0"
+  }
 }
