--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,5 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {}
+  "dependencies": {
+    "follow-redirects": "^1.15.2"
+  }
 }
