--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:watch": "npm run lint -- --watch --fix",
     "link": "ddc link",
     "dev": "ddc dev",
-    "build": "ddc build --script-formats=es,cjs,umd,iife",
+    "build": "ddc build --script-formats=es,cjs,umd,iife --node-package '@deot/http-server,@deot/http'",
     "update": "ddc update",
     "test": "ddc test",
     "add": "ddc add",
@@ -38,6 +38,6 @@
   },
   "homepage": "https://github.com/deot/http#readme",
   "devDependencies": {
-    "@deot/dev": "^2.3.1"
+    "@deot/dev": "^2.3.2"
   }
 }
