--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -18,5 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "@deot/http-core": "*"
+  }
 }
