feat: [hooks] remove helpers & use `@deot/helper-*`

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -18,6 +18,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@deot/helper-is": "^1.0.1",
+    "@deot/helper-utils": "^1.0.2"
+  },
   "devDependencies": {
     "@deot/http-core": "*"
   }
