--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@deot/helper-is": "^1.0.2",
+    "@deot/helper-utils": "^1.0.3",
     "@deot/http-core": "*",
     "@deot/http-hooks": "*",
     "follow-redirects": "^1.15.2"
