--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -15,6 +15,9 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "browser": {
+    "@deot/http-server": "@deot/http-client"
+  },
   "files": [
     "dist"
   ],
