workflow: `release` action updated

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,12 @@ on:
         required: true
         type: boolean
 
+      keepLastTag: 
+        description: 'Clean Tags & Keep Last'
+        default: false
+        required: true
+        type: boolean
+
       version:
         description: 'Update Version（major.minor.patch）'
         default: 'patch'
@@ -44,12 +50,12 @@ on:
           - patch
 
       forceUpdatePackage:
-        description: 'Force Update Package (input all -> **)'
+        description: 'Force Update Package (input all -> *)'
         default: ''
         type: string
 
       skipUpdatePackage:
-        description: 'Skip Update Package'
+        description: 'Skip Update Package (input all -> *)'
         default: ''
         type: string
 
@@ -115,9 +121,9 @@ jobs:
           ${{ !inputs.publish && '--no-publish' || '' }}
           ${{ !inputs.tag && '--no-tag' || '' }}
           ${{ !inputs.commit && '--no-commit' || '' }}
+          ${{ inputs.keepLastTag && '--keep-last-tag' || '' }}
           ${{ inputs.forceUpdatePackage && format('--force-update-package "{0}"', inputs.forceUpdatePackage) || ''}}
           ${{ inputs.skipUpdatePackage && format('--skip-update-package "{0}"', inputs.skipUpdatePackage) || ''}}
           ${{ inputs.customVersion && format('--custom-version "{0}"', inputs.customVersion) || ''}}
-
 
 
