feat: ES module as default

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@deot/http-shared",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.cjs.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -16,7 +17,5 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
   }
 }
