--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@deot/http",
   "version": "1.0.0",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "type": "module",
+  "main": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "browser": {
         "import": "./dist/index.browser.es.js",
-        "require": "./dist/index.browser.cjs.js"
+        "require": "./dist/index.browser.cjs"
       },
       "import": "./dist/index.es.js",
-      "require": "./dist/index.cjs.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
