--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@deot/http-server",
   "version": "1.0.0",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "type": "module",
+  "main": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.cjs.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -19,8 +19,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@deot/helper-is": "^1.0.2",
-    "@deot/helper-utils": "^1.0.3",
+    "@deot/helper-is": "^1.1.1",
+    "@deot/helper-utils": "^1.1.1",
     "@deot/http-core": "*",
     "@deot/http-hooks": "*",
     "follow-redirects": "^1.15.2"
