--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deot/http",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "type": "module",
   "main": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -26,10 +26,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@deot/http-client": "*",
-    "@deot/http-server": "*"
+    "@deot/http-client": "^1.1.1",
+    "@deot/http-server": "^1.1.1"
   },
   "devDependencies": {
-    "@deot/http-core": "*"
+    "@deot/http-core": "^1.1.1"
   }
 }
