--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,8 @@
   "files": [
     "dist"
   ],
+  "jsdelivr": "dist/index.umd.js",
+  "unpkg": "dist/index.umd.js",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
