--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -2,15 +2,15 @@
   "name": "@deot/http",
   "version": "1.1.1",
   "type": "module",
-  "main": "dist/index.es.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "browser": {
-        "import": "./dist/index.browser.es.js",
+        "import": "./dist/index.browser.js",
         "require": "./dist/index.browser.cjs"
       },
-      "import": "./dist/index.es.js",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
