--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,11 +2,11 @@
   "name": "@deot/http-server",
   "version": "1.1.1",
   "type": "module",
-  "main": "dist/index.es.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
