chore: add `typecheck` from ci
cann't use with lint-staged

lint-staged/lint-staged#468 check all files

try fixed
microsoft/TypeScript#27379
microsoft/TypeScript#49817

as an alternative
https://github.com/gustavopch/tsc-files

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "update": "ddc update",
     "test": "ddc test",
     "add": "ddc add",
-    "release": "ddc release"
+    "release": "ddc release",
+    "typecheck": "tsc --noEmit --skipLibCheck"
   },
   "scripts-info": {
     "init": "首次安装",
