--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
 
       - run: pnpm install
 
+      - name: Run typecheck
+        run: npm run typecheck
+
       - name: Run unit tests
         run: npm run test -- --package-name '*'
 
