--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "{packages,scripts}/**/*.{js,ts,jsx,tsx,md}": [
-    "esw --ext '.js,.ts,.jsx,.tsx,.md' --fix"
+  "**/*.{js,ts,jsx,tsx,md}": [
+    "eslint --fix"
   ]
 }
