chore(client,server): deps updated
@deot/dev: ^2.8.8 -> ^2.9.0
formidable: ^3.5.1 -> ^3.5.2
follow-redirects: ^1.15.6 -> ^1.15.9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup cache for Chromium binary
         uses: actions/cache@v4
         with:
-          path: ~/.cache/puppeteer/chrome
+          path: ~/.cache/puppeteer
           key: chromium-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Install pnpm
@@ -40,6 +40,7 @@ jobs:
           cache: 'pnpm'
 
       - run: pnpm install
+      - run: node node_modules/puppeteer/install.mjs
 
       - name: Run typecheck
         run: npm run typecheck
