--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Setup cache for Chromium binary
         uses: actions/cache@v4
         with:
-          path: ~/.cache/puppeteer/chrome
+          path: ~/.cache/puppeteer
           key: chromium-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Install pnpm
@@ -109,7 +109,9 @@ jobs:
         run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
 
       - name: Run init
-        run: npm run init
+        run: |
+          npm run init
+          node node_modules/puppeteer/install.mjs
 
       - name: Run release
         run: >-
