ci: use node@22.16.0
vitest-dev/vitest#7878
后续修复再放开

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set node version to latest
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 22.16.0
           cache: 'pnpm'
 
       - run: pnpm install
