--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Set node version to latest
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 22.16.0
           cache: 'pnpm'
 
       - name: Checkout main
